# mlb-led-scoreboard

./: .editorconfig  .flake8  .git-config-template  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.md  Makefile  PULL_REQUEST_TEMPLATE.md  README-PI5.md  README.md  cli.py  config.example.json  config.json.example  config.schema.json  config_server.py  debug.py  driver.py  emulator_config.json  generate_config.py  highlight.py  hightlight.py  homekit.patch  homekit_bridge.py  homekit_control.py  install.sh  j.py  main.py  mlb-scoreboard-config.service  mlb-scoreboard.service  powerwallLogin.py  pyproject.toml  renderer.py  requirements-pi5.txt  requirements.dev.txt  requirements.rpi.txt  requirements.txt  scoreboard.py  scoreboard_renderer.py  (+5 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
Assets/: 4x6.bdf  colors.json
assets/: 4x6.bdf  5x7.bdf
bullpen/: README.md  pyproject.toml
bullpen/example-plugin/: pyproject.toml
bullpen/example-plugin/src/mlb_led_scoreboard_example_plugin/: __init__.py
bullpen/src/bullpen/: __init__.py  config.py  logging.py  plugins.py  renderer.py  time_formats.py  util.py
bullpen/src/bullpen/api/: __init__.py  config.py  data.py  renderer.py  update.py
colors/: README.md  scoreboard.example.json  scoreboard.json.example  scoreboard.schema.json  teams.example.json  teams.json.example  teams.schema.json
coordinates/: README.md  coordinates.json.example  w128h32.example.json  w128h32.json.example  w128h64.example.json  w128h64.json.example  w192h64.example.json  w192h64.json.example  (+7 more)
news/: pyproject.toml
news/src/mlb_led_scoreboard_news/: __init__.py  config.py  data.py  dates.py  headlines.py  renderer.py  weather.py
powerwall/: pyproject.toml
powerwall/src/mlb_led_scoreboard_powerwall/: __init__.py  config.py  data.py  renderer.py
standings/: pyproject.toml
standings/src/mlb_led_scoreboard_standings/: __init__.py  config.py  renderer.py  standings.py
standings/tests/: test_standings.py
standings/tests/data/: demo-date-end.json  demo-date-midseason.json  demo-date-playoffs.json
(+238 files in other folders)
