[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-led-scoreboard-standings"
version = "9.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.'mlbled.bullpen.plugin']
"standings" = "mlb_led_scoreboard_standings:load"
