[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "mlb-led-scoreboard-example-plugin"
version = "0.1.0"


[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.'bullpen.mlbled.plugin']
"example" = "mlb_led_scoreboard_example_plugin:load"
